--- a/00-Python Object and Data Structure Basics/08-Files.ipynb
+++ b/00-Python Object and Data Structure Basics/08-Files.ipynb
@@ -27,19 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting test.txt\n"
+      "Writing test2.txt\n"
      ]
     }
    ],
    "source": [
-    "%%writefile test.txt\n",
+    "%%writefile test2.txt\n",
     "Hello, this is a quick test file."
    ]
   },
@@ -84,16 +84,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\Marcial\\\\Pierian-Data-Courses\\\\Complete-Python-3-Bootcamp\\\\00-Python Object and Data Structure Basics'"
+       "'C:\\\\Users\\\\chy34\\\\PythonLearning\\\\Complete-Python-3-Bootcamp\\\\00-Python Object and Data Structure Basics'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,6 +288,26 @@
     "# Passing 'w+' lets us read and write to the file\n",
     "\n",
     "my_file = open('test.txt','w+')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('test.txt', mode='w') as myfile:\n",
+    "         myfile.write('This is very nice1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('test.txt', mode='w') as myfile:\n",
+    "    myfile.write('Hello World')"
    ]
   },
   {
@@ -545,7 +565,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -559,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
