--- a/Comp9021/Lecture Notebooks/Week 3 - Lecture 5.ipynb
+++ b/Comp9021/Lecture Notebooks/Week 3 - Lecture 5.ipynb
@@ -695,21 +695,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "f9738f38-6682-49e8-8220-93a5f2654507",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 0-21: unknown Unicode character name (433710613.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [41]\u001b[0;36m\u001b[0m\n\u001b[0;31m    '\\N{large black square}'\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 0-21: unknown Unicode character name\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'⬜'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "'\\N{large black square}'"
+    "'\\N{white large square}'"
    ]
   },
   {
