--- a/Comp9021/Lecture Notebooks/Week 3 - Lecture 6.ipynb
+++ b/Comp9021/Lecture Notebooks/Week 3 - Lecture 6.ipynb
@@ -1748,7 +1748,9 @@
    "cell_type": "code",
    "execution_count": 105,
    "id": "12b9db80-9d3b-4458-ac25-f92da8be9157",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1761,6 +1763,67 @@
    "source": [
     "timeit primes_up_to(10_000_000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "202e70d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic = {(1,2): 'abc'}\n",
+    "dic = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d55a685a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if dic:\n",
+    "    print ('abc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4451be0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str = str()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f7f16ad8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f752c427",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
