--- a/Portfolio/00 - Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/Portfolio/00 - Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -9,7 +9,6 @@
     "<a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\n",
     "___\n",
     "<center><em>Content Copyright by Pierian Data</em></center>\n",
-    "\n",
     "# Objects and Data Structures Assessment Test"
    ]
   },
@@ -30,24 +29,24 @@
     "collapsed": true
    },
    "source": [
-    "Write a brief description of all the following Object Types and Data Structures we've learned about: "
+    "Write (or just say out loud to yourself) a brief description of all the following Object Types and Data Structures we've learned about. You can edit the cell below by double clicking on it. Really this is just to test if you know the difference between these, so feel free to just think about it, since your answers are self-graded."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**For the full answers, review the Jupyter notebook introductions of each topic!**\n",
+    "Double Click HERE to edit this markdown cell and write answers.\n",
     "\n",
-    "[Numbers](http://nbviewer.ipython.org/github/jmportilla/Complete-Python-Bootcamp/blob/master/Numbers.ipynb)\n",
+    "Numbers: any integer or floating point value\n",
     "\n",
-    "[Strings](http://nbviewer.ipython.org/github/jmportilla/Complete-Python-Bootcamp/blob/master/Strings.ipynb)\n",
+    "Strings: any values within '' or \"\"\n",
     "\n",
-    "[Lists](http://nbviewer.ipython.org/github/jmportilla/Complete-Python-Bootcamp/blob/master/Lists.ipynb)\n",
+    "Lists: a ',' seperated list of values of any object type. they can be updated/added/removed/sorted/appended/etc within [] many methods\n",
     "\n",
-    "[Tuples](http://nbviewer.ipython.org/github/jmportilla/Complete-Python-Bootcamp/blob/master/Tuples.ipynb)\n",
+    "Tuples: a ',' seperated list of values of any object type. they can not be updated/added/removed/sorted/appended/etc within {}. few methods\n",
     "\n",
-    "[Dictionaries](http://nbviewer.ipython.org/github/jmportilla/Complete-Python-Bootcamp/blob/master/Dictionaries.ipynb)\n"
+    "Dictionaries: a key : value pair of any data type\n"
    ]
   },
   {
@@ -63,8 +62,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -72,14 +73,13 @@
        "100.25"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Your answer is probably different\n",
-    "(60 + (10 ** 2) / 4 * 7) - 134.75"
+    "(( (100 + 1.25) - 1 ) * 1) / 1"
    ]
   },
   {
@@ -97,48 +97,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "44"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "4 * (6 + 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "29"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "4 * 6 + 5 "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -152,21 +114,18 @@
     }
    ],
    "source": [
-    "4 + 6 * 5 "
+    "44\n",
+    "29\n",
+    "34"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the *type* of the result of the expression 3 + 1.5 + 4?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Answer: Floating Point Number**"
+    "What is the *type* of the result of the expression 3 + 1.5 + 4?<br><br>\n",
+    "\n",
+    "float"
    ]
   },
   {
@@ -178,44 +137,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10.0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
     }
    ],
    "source": [
     "# Square root:\n",
-    "100 ** 0.5"
+    "x = 4**.5\n",
+    "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100"
+       "16"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Square:\n",
-    "10 ** 2"
+    "4**2"
    ]
   },
   {
@@ -234,8 +195,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -243,7 +206,7 @@
        "'e'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +215,7 @@
     "s = 'hello'\n",
     "# Print out 'e' using indexing\n",
     "\n",
-    "s[1]"
+    "s [1]"
    ]
   },
   {
@@ -264,8 +227,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -273,7 +238,7 @@
        "'olleh'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,20 +247,22 @@
     "s ='hello'\n",
     "# Reverse the string using slicing\n",
     "\n",
-    "s[::-1]"
+    "s [::-1]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given the string 'hello', give two methods of producing the letter 'o' using indexing."
+    "Given the string hello, give two methods of producing the letter 'o' using indexing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -303,7 +270,7 @@
        "'o'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,13 +281,15 @@
     "\n",
     "# Method 1:\n",
     "\n",
-    "s[-1]"
+    "s [-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -328,7 +297,7 @@
        "'o'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +305,7 @@
    "source": [
     "# Method 2:\n",
     "\n",
-    "s[4]"
+    "s [4]"
    ]
   },
   {
@@ -355,29 +324,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 0, 0]"
+       "[None]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Method 1:\n",
-    "[0]*3"
+    "x = [None]\n",
+    "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -385,15 +359,16 @@
        "[0, 0, 0]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Method 2:\n",
-    "list2 = [0,0,0]\n",
-    "list2"
+    "x = [0,0]\n",
+    "x.append(0)\n",
+    "x"
    ]
   },
   {
@@ -405,30 +380,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": [
-    "list3 = [1,2,[3,4,'hello']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "list3[2][2] = 'goodbye'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -436,12 +391,15 @@
        "[1, 2, [3, 4, 'goodbye']]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "list3 = [1,2,[3,4,'hello']]\n",
+    "\n",
+    "list3 [2][2] = \"goodbye\"\n",
     "list3"
    ]
   },
@@ -454,19 +412,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": [
-    "list4 = [5,3,4,6,1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -474,34 +423,14 @@
        "[1, 3, 4, 5, 6]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Method 1:\n",
-    "sorted(list4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 3, 4, 5, 6]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Method 2:\n",
+    "list4 = [5,3,4,6,1]\n",
+    "\n",
     "list4.sort()\n",
     "list4"
    ]
@@ -522,8 +451,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -531,7 +462,7 @@
        "'hello'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,14 +470,15 @@
    "source": [
     "d = {'simple_key':'hello'}\n",
     "# Grab 'hello'\n",
-    "\n",
-    "d['simple_key']"
+    "d ['simple_key']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -554,7 +486,7 @@
        "'hello'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,26 +494,15 @@
    "source": [
     "d = {'k1':{'k2':'hello'}}\n",
     "# Grab 'hello'\n",
-    "\n",
-    "d['k1']['k2']"
+    "d ['k1']['k2']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": [
-    "# Getting a little tricker\n",
-    "d = {'k1':[{'nest_key':['this is deep',['hello']]}]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -589,19 +510,22 @@
        "'hello'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# This was harder than I expected...\n",
-    "d['k1'][0]['nest_key'][1][0]"
+    "# Getting a little tricker\n",
+    "d = {'k1':[{'nest_key':['this is deep',['hello']]}]}\n",
+    "\n",
+    "#Grab hello\n",
+    "d ['k1'][0]['nest_key'][1][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -609,10 +533,10 @@
     {
      "data": {
       "text/plain": [
-       "{'k1': [1, 2, {'k2': ['this is tricky', {'tough': [1, 2, ['hello']]}]}]}"
+       "'hello'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,42 +544,17 @@
    "source": [
     "# This will be hard and annoying!\n",
     "d = {'k1':[1,2,{'k2':['this is tricky',{'tough':[1,2,['hello']]}]}]}\n",
-    "d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'hello'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Phew!\n",
-    "d['k1'][2]['k2'][1]['tough'][2][0]"
+    "\n",
+    "d ['k1'][2]['k2'][1]['tough'][2][0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can you sort a dictionary? Why or why not?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Answer: No! Because normal dictionaries are *mappings* not a sequence. **"
+    "Can you sort a dictionary? Why or why not?<br><br>\n",
+    "\n",
+    "no because it's not immutable"
    ]
   },
   {
@@ -669,32 +568,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the major difference between tuples and lists?"
+    "What is the major difference between tuples and lists?<br><br>\n",
+    "\n",
+    "list are immutable"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Tuples are immutable!**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "How do you create a tuple?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "t = (1,2,3)"
+    "How do you create a tuple?<br><br>\n",
+    "\n",
+    "t = (1,2,3)\n",
+    "t\n"
    ]
   },
   {
@@ -708,14 +594,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is unique about a set?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Answer: They don't allow for duplicate items!**"
+    "What is unique about a set?<br><br>\n",
+    "it only stores unique values"
    ]
   },
   {
@@ -727,19 +607,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": [
-    "list5 = [1,2,2,33,4,4,11,22,3,3,2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -747,13 +618,15 @@
        "{1, 2, 3, 4, 11, 22, 33}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "set(list5)"
+    "list5 = [1,2,2,33,4,4,11,22,3,3,2]\n",
+    "\n",
+    "set(list5)\n"
    ]
   },
   {
@@ -815,8 +688,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -824,20 +699,23 @@
        "False"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Answer before running cell\n",
-    "2 > 3"
+    "2 > 3\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -845,7 +723,7 @@
        "False"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,8 +735,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -866,7 +746,7 @@
        "False"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,8 +758,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -887,7 +769,7 @@
        "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,8 +781,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -908,7 +792,7 @@
        "False"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,8 +811,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -936,7 +822,7 @@
        "False"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
