--- a/Portfolio/02 - Python Statements/loops.ipynb
+++ b/Portfolio/02 - Python Statements/loops.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -10,18 +10,16 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "3\n"
+      "3\n",
+      "5\n"
      ]
     }
    ],
    "source": [
     "x = [1,2,3]\n",
-    "\n",
-    "for y in x:\n",
-    "    if y == 2:\n",
-    "       continue\n",
-    "    print(y)   \n",
-    "    "
+    "z = [(1,2),(3,4),(5,6)]\n",
+    "for a,b in z:\n",
+    "   print (a)"
    ]
   },
   {
